# Rusterizer

./: README.md
rusterizer/: Cargo.toml
rusterizer/src/: framebuffer.rs  main.rs  triangle.rs  utils.rs  vertex.rs  window.rs
rusterizer/src/graphics/: camera.rs  mesh.rs  triangle.rs  vertex.rs
rusterizer/src/math/: boundingbox2D.rs  transform.rs
rusterizer/src/resources/: texture.rs
